--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ Session.vim
 ### Rails ###
 *.rbc
 capybara-*.html
-/log
+/log/*.log
 /db/*.sqlite3
 /public/system
 /coverage/
@@ -45,10 +45,6 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
-
-# Secrets
-config/initializers/secret_token.rb
-config/secrets.yml
 
 ## Environment normalisation:
 /.bundle
