--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -15,5 +15,8 @@ development:
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
+staging:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
