--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -15,6 +15,9 @@ development:
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
+test:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
 staging:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 
