--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -16,10 +16,10 @@ development:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 test:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: {SECRET_KEY_BASE}
 
 staging:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: {SECRET_KEY_BASE}
 
 production:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: {SECRET_KEY_BASE}
