--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,24 @@
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  host: localhost
   pool: 5
   timeout: 5000
+  port: 5432
+  user: od4d
+  password: od4dpass
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: od4d
 
 test:
   <<: *default
-  database: db/development.sqlite3
+  database: od4d
 
 staging:
   <<: *default
-  database: db/staging.sqlite3
+  database: od4d
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: od4d
